examples/test/testpolicy5730.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5730
  namespace: namespace75
spec:
  podSelector:
    matchLabels:
      key15: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value14
          key18: value18
          key34: value4
      podSelector:
        matchLabels:
          key20: value1
          key11: value44
